# basket

./: .gitignore  Cargo.toml  azure-pipelines.yml  basket.sln  docker-compose.infra.yml  main.go  paket.dependencies  test.http
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: basket.rs  basket_item.rs  main.rs
src/Basket.Api/: Basket.Api.csproj  Dockerfile  Program.cs  Startup.cs  appsettings.Development.json  appsettings.json  paket.references
src/Basket.Api/BasketOrleans/: Test.cs
src/Basket.Api/Controllers/: WeatherForecastController.cs
src/Basket.Application/: Basket.Application.csproj  Program.cs  paket.references
src/Basket.Common/: Class1.cs
src/Basket.Core/: Basket.Core.fsproj  Class1.cs  Library.fs  paket.references
src/Basket.Domain/: Basket.Domain.csproj  Basket.Domain.fsproj  Class1.cs  Helpers.fs  Repository.fs  Types.fs  paket.references
src/Basket.Infrastructure/: Basket.Infrastructure.csproj  paket.references
src/Basket.Infrastructure.Persistence/: Basket.Infrastructure.Persistence.csproj  MappingExtensions.cs
src/Basket.Persistence/: Basket.Persistence.csproj  MappingExtensions.cs
src/customer_basket/: basket_item.rs  mod.rs
tests/Basket.ApplicationUnitTests/: Basket.ApplicationUnitTests.csproj  UnitTest1.cs
tests/Basket.Core.UnitTests/: Basket.Core.UnitTests.fsproj  paket.references
tests/Basket.DomainUnitTests/: Basket.DomainUnitTests.csproj  UnitTest1.cs
tests/Basket.InfrastructureTests/: Basket.InfrastructureTests.csproj  MongoCustomerBasketRepository.cs  UnitTest1.cs  paket.references
(+38 files in other folders)
