[package]
name = "basket-api"
version = "0.1.0"
authors = ["dominikus1993 <dominikus1910@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.2"
actix-rt = "0.2.3"
env_logger = "0.6.1"
futures = "0.1.27"
redis = "0.10.0"
serde_json = "1.0.39"
serde_derive = "1.0.93"
serde = "1.0.93"